ingress-nginx/httpproxy-headers-routing.yaml
#基于标头路由
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-headers-routing
  namespace: dev
spec:
  virtualhost:
    fqdn: testing0008.eniot.io
  routes:
  - conditions:
    - header:
        name: X-Canary
        present: true
    - header:
        name: User-Agent
        contains: curl
    services:
    - name: demo-2
      port: 80
  - services:
    - name: demo
      port: 80
